deploy/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-lws-operator
  namespace: openshift-lws-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: openshift-lws-operator
  template:
    metadata:
      labels:
        name: openshift-lws-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: openshift-lws-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          image: ${OPERATOR_IMAGE}
          volumeMounts:
            - name: tmp
              mountPath: "/tmp"
          ports:
            - containerPort: 8443
              name: metrics
          command:
            - lws-operator
          args:
            - "operator"
          imagePullPolicy: Always
      serviceAccountName: openshift-lws-operator
      volumes:
        - name: tmp
          emptyDir: {}
